# public/swagger.json
@@ -18,82 +18,8 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"StatusCode": {
-				"enum": [
-					100,
-					101,
-					102,
-					103,
-					200,
-					201,
-					202,
-					203,
-					204,
-					205,
-					206,
-					207,
-					208,
-					226,
-					300,
-					301,
-					302,
-					303,
-					304,
-					305,
-					306,
-					307,
-					308,
-					400,
-					401,
-					402,
-					403,
-					404,
-					405,
-					406,
-					407,
-					408,
-					409,
-					410,
-					411,
-					412,
-					413,
-					414,
-					415,
-					416,
-					417,
-					418,
-					421,
-					422,
-					423,
-					424,
-					425,
-					426,
-					428,
-					429,
-					431,
-					451,
-					500,
-					501,
-					502,
-					503,
-					504,
-					505,
-					506,
-					507,
-					508,
-					510,
-					511
-				],
-				"type": "number"
-			},
 			"APIResponse_string_": {
 				"properties": {
-					"statusCode": {
-						"$ref": "#/components/schemas/StatusCode"
-					},
-					"statusText": {
-						"type": "string"
-					},
 					"description": {
 						"type": "string"
 					},
@@ -105,8 +31,6 @@
 					}
 				},
 				"required": [
-					"statusCode",
-					"statusText",
 					"description",
 					"message",
 					"data"
@@ -114,47 +38,36 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"User": {
+			"APIResponse_object_": {
 				"properties": {
-					"id": {
-						"type": "number",
-						"format": "double"
-					},
-					"email": {
+					"description": {
 						"type": "string"
 					},
-					"name": {
+					"message": {
 						"type": "string"
 					},
-					"status": {
-						"type": "string",
-						"enum": [
-							"Happy",
-							"Sad"
-						]
-					},
-					"phoneNumbers": {
-						"items": {
-							"type": "string"
-						},
-						"type": "array"
+					"data": {
+						"additionalProperties": false,
+						"type": "object"
 					}
 				},
 				"required": [
-					"id",
-					"email",
-					"name",
-					"phoneNumbers"
+					"description",
+					"message",
+					"data"
 				],
 				"type": "object",
 				"additionalProperties": false
 			},
-			"Pick_User.email-or-name-or-phoneNumbers_": {
+			"Pick_User.email-or-name-or-password-or-phoneNumbers_": {
 				"properties": {
 					"email": {
 						"type": "string"
 					},
 					"name": {
+						"type": "string"
+					},
+					"password": {
 						"type": "string"
 					},
 					"phoneNumbers": {
@@ -167,13 +80,14 @@
 				"required": [
 					"email",
 					"name",
+					"password",
 					"phoneNumbers"
 				],
 				"type": "object",
 				"description": "From T, pick a set of properties whose keys are in the union K"
 			},
 			"UserCreationParams": {
-				"$ref": "#/components/schemas/Pick_User.email-or-name-or-phoneNumbers_"
+				"$ref": "#/components/schemas/Pick_User.email-or-name-or-password-or-phoneNumbers_"
 			}
 		},
 		"securitySchemes": {
@@ -237,6 +151,25 @@
 				"parameters": []
 			}
 		},
+		"/auth/register": {
+			"post": {
+				"operationId": "Register",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/PingResponse"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": []
+			}
+		},
 		"/ping": {
 			"get": {
 				"operationId": "GetMessage",
@@ -262,49 +195,19 @@
 				"parameters": []
 			}
 		},
-		"/users/{userId}": {
-			"get": {
-				"operationId": "GetUser",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/User"
-								}
-							}
-						}
-					}
-				},
-				"security": [],
-				"parameters": [
-					{
-						"in": "path",
-						"name": "userId",
-						"required": true,
-						"schema": {
-							"format": "double",
-							"type": "number"
-						}
-					},
-					{
-						"in": "query",
-						"name": "name",
-						"required": false,
-						"schema": {
-							"type": "string"
-						}
-					}
-				]
-			}
-		},
-		"/users": {
+		"/user": {
 			"post": {
 				"operationId": "CreateUser",
 				"responses": {
 					"201": {
-						"description": "Created"
+						"description": "Created",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/APIResponse_object_"
+								}
+							}
+						}
 					}
 				},
 				"security": [],
