# src/controllers/users.controller.ts
@@ -1,3 +1,6 @@
+import { APIResponse } from './../models/apiResponse';
+import { Configs } from './../config/config';
+import * as jwt from 'jsonwebtoken';
 import {
     Body,
     Controller,
@@ -8,26 +11,33 @@ import {
     Route,
     SuccessResponse,
 } from "tsoa";
-import { User } from "../interface/user";
+import { User } from "../interface/User";
 import { UsersService, UserCreationParams } from "../Services/users.service";
 
-@Route("users")
-export class UsersController extends Controller {
-    @Get("{userId}")
-    public async getUser(
-        @Path() userId: number,
-        @Query() name?: string
-    ): Promise<User> {
-        return new UsersService().get(userId, name);
-    }
+const _CONFIGS = new Configs();
+const secret = _CONFIGS.JWT.secret || "HARMONY";
 
+@Route("user")
+export class UsersController extends Controller {
     @SuccessResponse("201", "Created") // Custom success response
     @Post("/")
     public async createUser(
         @Body() requestBody: UserCreationParams
-    ): Promise<void> {
+    ): Promise<APIResponse<object>> {
         this.setStatus(201); // set return status 201
         new UsersService().create(requestBody);
-        return;
+
+        // Create token
+        const token = jwt.sign(
+            requestBody,
+            secret,
+            {
+                expiresIn: "2h",
+            }
+        );
+        return new APIResponse<object>({
+            ...requestBody,
+            token: token
+        });
     }
 }
